# teleoperation_ur5_allegro_leap

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
config/: calibration_allegro_states.pkl  leap_filter_params.yaml
launch/: allegro_mujoco_joint_control.launch  allegro_teleop_mujoco.launch  allegro_teleop_real.launch  allegro_teleop_sim.launch  kinect_setup.launch  leap_start.launch  moveit_ur5_teleop.launch  relaxed_setup.launch  rosbag_record.launch  start_mujoco_sim.launch  ur5_allegro_teleop.launch  ur5_relaxed_setup.launch  ur5_teleop.launch
msg/: Control_Type.msg  Experiment.msg
nodes/: allegro_demonstration_player.py  allegro_pose_viz.py  check_fingerpose.py  full_teleop_gui.py  leap2allegro.py  leap_ur5_controller.py  marker_control_teleop.py  relaxed_ik_request_interface.py  teleop_gui_node.py  topic_recorder.py  ur_controller_test.py  ur_move.py
rviz/: teleop_viz.rviz
scripts/: experiment_recorder.sh
src/teleoperation_ur5_allegro_leap/: __init__.py
src/teleoperation_ur5_allegro_leap/config/: __init__.py  experiments.yaml  relaxed_config.py
src/teleoperation_ur5_allegro_leap/demonstrations/: __init__.py  demonstration_pipeline.py
src/teleoperation_ur5_allegro_leap/demonstrations/app/: __init__.py  demonstration_player_GUI.py  synergy_controller_GUI.py
src/teleoperation_ur5_allegro_leap/demonstrations/synergies/: __init__.py  pca_synergy.py  synergy_mapper.py
src/teleoperation_ur5_allegro_leap/demonstrations/synergies/prelearnt/: pca_synergy_mapper.yaml
src/teleoperation_ur5_allegro_leap/demonstrations/trajectory_learn/: __init__.py  independentGP_learner.py  joint_trajectory.py  trajectory_collection.py  trajectory_learner.py
src/teleoperation_ur5_allegro_leap/demonstrations/trajectory_learn/prelearnt/: joint_trajectories_user1.yaml  pca_indGP_trajectory_gen.yaml
src/teleoperation_ur5_allegro_leap/leap2tf/: leap2tf.py  leap2tf_hierarchical.py  leap2worldGUI.py  leap_teleop_pose.py  leaptfutils.py
src/teleoperation_ur5_allegro_leap/synergies/: __init__.py  pca_synergy.py  synergy_mapper.py
src/teleoperation_ur5_allegro_leap/synergies/app/: __init__.py  synergy_controller_GUI.py
src/teleoperation_ur5_allegro_leap/synergies/prelearnt/: pca_mapping.yaml
src/teleoperation_ur5_allegro_leap/teleop/: __init__.py  leap_subscriber.py  relaxed_wrapper.py
src/teleoperation_ur5_allegro_leap/teleop/allegro/: __init__.py  allegro_fk.py  allegro_state.py  allegro_utils.py  calibration.py  key_event_catcher.py  kinematic_retargeting.py  leap_allegro_teleop.py  leap_state.py
src/teleoperation_ur5_allegro_leap/teleop/app/: __init__.py  calibration_gui.py  experiment_gui.py  interactive_marker_control.py  key_event_catcher.py  tf_interactive_marker.py  timer.py  ur5_ee_teleop_gui.py  ur5_moveit_gui.py
src/teleoperation_ur5_allegro_leap/teleop/ur5/: __init__.py  arm_teleop_input.py  interactive_marker_control.py  joint_movements.py  leap2ur5.py  leap_to_ur5.py  leap_ur5_target_gen.py  leap_ur5_teleop.py  moveit_leap2ur5.py  relaxed_ik_connection.py  ur5_fk.py  ur5_state.py  ur5_utils.py  workspace_bounds.py
src/teleoperation_ur5_allegro_leap/teleop/ur5/config/: ur5_ee_bounds.yaml
src/teleoperation_ur5_allegro_leap/teleop/ur5/legacy/: utils.py
srv/: Arm_Cartesian_Target.srv  Get_Fingertip_Distance.srv  GoTo_ByName.srv  Go_To_Base.srv  Toggle_ArmTeleopMode.srv  Toggle_Calibration.srv  Toggle_Control.srv  Update_Finger_Measure.srv
